fixed monster anim eye pop and edited about page. testing on mobile.

--- a/Public/styles/styles.css
+++ b/Public/styles/styles.css
@@ -361,7 +361,7 @@ button:hover + .character_sprite{
     width: 40px;
     height: 20px;
     background: url('/media/sprites/monster_open_eyes_sprite4.png') left center;
-    animation: openEyes 10s steps(415) infinite alternate-reverse;
+    animation: openEyes 10s steps(414) infinite alternate-reverse;
     animation-delay: 1s;
 }
 
@@ -415,7 +415,7 @@ button:hover + .character_sprite{
 
 @keyframes openEyes{
     /* 415 steps */
-  from{background-position-x:-16600px;}
+  from{background-position-x:-16560px;}
   to{background-position-x:0px;}
 }
 
